fixed spacing on rightside bar

--- a/web/chat-interface/css/style.css
+++ b/web/chat-interface/css/style.css
@@ -515,6 +515,7 @@ p {
 .chat-user {
   padding: 10px;
   width: 100%;
+  padding-bottom: 1.5em;
 }
 
   background-color: #406384;
